--- a/app/kitchen/webapp/i18n/i18n.properties
+++ b/app/kitchen/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for com.sumanth.nnrg.kitchen
+# This is the resource bundle for com.spandana.nnrg.kitchen
 
 #Texts for manifest.json
 
