--- a/app/product/webapp/i18n/i18n.properties
+++ b/app/product/webapp/i18n/i18n.properties
@@ -1,9 +1,9 @@
-# This is the resource bundle for com.spandana.nnrg.kitchen
+# This is the resource bundle for com.spandana.nnrg.product
 
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=kitchen details
+appTitle=product
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
